// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerSideExceptionDialog should render an ServerSideException Alert correctly 1`] = `
<Fragment>
  Trans(i18nKey=error1, ["hi"])
  <Component
    aria-label="Show Stack Trace"
    onClick={[Function]}
    variant="link"
  >
    Show Stack Trace
  </Component>
  <Modal
    actions={
      <Unknown
        aria-label="Close"
        onClick={[Function]}
      >
        Trans(i18nKey=close)
      </Unknown>
    }
    appendTo={<body />}
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isFooterLeftAligned={false}
    isLarge={false}
    isOpen={false}
    isSmall={false}
    onClose={[Function]}
    showClose={true}
    title="Trans(i18nKey=serverSideError)"
  >
    <Title
      size="md"
    >
      Error1: message1
    </Title>
    <Text
      key="uuid-1"
    >
      1.1
    </Text>
    <Text
      key="uuid-2"
    >
      1.2
    </Text>
    <Text
      key="uuid-3"
    >
      1.3
    </Text>
    <Text>
      Caused By
    </Text>
    <Title
      size="md"
    >
      Error2: message2
    </Title>
    <Text
      key="uuid-4"
    >
      2.1
    </Text>
    <Text
      key="uuid-5"
    >
      2.2
    </Text>
    <Text
      key="uuid-6"
    >
      2.3
    </Text>
  </Modal>
</Fragment>
`;

exports[`ServerSideExceptionDialog should render an ServerSideException Modal correctly 1`] = `
<Fragment>
  Trans(i18nKey=error1, ["hi"])
  <Component
    aria-label="Show Stack Trace"
    onClick={[Function]}
    variant="link"
  >
    Show Stack Trace
  </Component>
  <Modal
    actions={
      <Unknown
        aria-label="Close"
        onClick={[Function]}
      >
        Trans(i18nKey=close)
      </Unknown>
    }
    appendTo={<body />}
    ariaDescribedById=""
    className=""
    hideTitle={false}
    isFooterLeftAligned={false}
    isLarge={false}
    isOpen={true}
    isSmall={false}
    onClose={[Function]}
    showClose={true}
    title="Trans(i18nKey=serverSideError)"
  >
    <Title
      size="md"
    >
      Error1: message1
    </Title>
    <Text
      key="uuid-13"
    >
      1.1
    </Text>
    <Text
      key="uuid-14"
    >
      1.2
    </Text>
    <Text
      key="uuid-15"
    >
      1.3
    </Text>
    <Text>
      Caused By
    </Text>
    <Title
      size="md"
    >
      Error2: message2
    </Title>
    <Text
      key="uuid-16"
    >
      2.1
    </Text>
    <Text
      key="uuid-17"
    >
      2.2
    </Text>
    <Text
      key="uuid-18"
    >
      2.3
    </Text>
  </Modal>
</Fragment>
`;
